(library
 (name unicanren)
 (modules lib lib_tests test_numbers promises external_paral async external_async)
 (libraries
  ;GT
  lwt.unix
  )
 ;  (instrumentation
 ;   (backend bisect_ppx))
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_expect
   ;bisect_ppx
   ;GT.ppx_all
   ))
 (inline_tests))
